// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-faceboook-integration Everthing is successful Walkthrough passes in the correct arguments to axios 1`] = `
Array [
  Array [
    Object {
      "method": "get",
      "url": "https://graph.facebook.com/oauth/access_token?grant_type=fb_exchange_token&client_id=5e31c81640a22c000f5d7f27&client_secret=123457&fb_exchange_token=short-user-access-token",
    },
  ],
  Array [
    Object {
      "method": "get",
      "url": "https://graph.facebook.com/12345678?fields=access_token&access_token=access-token",
    },
  ],
  Array [
    Object {
      "auth": Object {
        "password": "secret",
        "username": "id",
      },
      "method": "get",
      "url": "https://api.smooch.io/v2/apps/5e31c81640a22c000f5d7f28/integrations/5e31c81640a22c000f5d7f28",
    },
  ],
]
`;

exports[`update-faceboook-integration Everthing is successful Walkthrough passes in the correct arguments to docClient.update() 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeNames": Object {
        "#name": "name",
        "#updatedBy": "updated-by",
      },
      "ExpressionAttributeValues": Object {
        ":name": "smooch",
        ":updated": "January 1 1970",
        ":updatedBy": "667802d8-2260-436c-958a-2ee0f71f73f0",
      },
      "Key": Object {
        "id": "5e31c81640a22c000f5d7f28",
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
      "ReturnValues": "ALL_NEW",
      "TableName": "us-east-1-dev-smooch",
      "UpdateExpression": "set #name = :name, #updatedBy = :updatedBy, updated = :updated",
    },
  ],
]
`;

exports[`update-faceboook-integration Everthing is successful Walkthrough passes in the correct arguments to secretsClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
]
`;

exports[`update-faceboook-integration Everthing is successful Walkthrough passes in the correct arguments to updateIntegration() 1`] = `
Array [
  Array [
    "5e31c81640a22c000f5d7f28",
    "5e31c81640a22c000f5d7f28",
    Object {
      "pageAccessToken": "access-token",
    },
  ],
]
`;

exports[`update-faceboook-integration Everthing is successful Walkthrough passes in the correct arguments to validateTenantPermissions 1`] = `
Array [
  Array [
    "66d83870-30df-4a3b-8801-59edff162034",
    Object {
      "user-id": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
    Array [
      "FACEBOOK_INTEGRATIONS_APP_UPDATE",
    ],
  ],
]
`;

exports[`update-faceboook-integration Everthing is successful sends back status 200 when the code runs without error 1`] = `
Object {
  "body": Object {
    "result": Object {
      "facebookAppId": "facebook-app-id",
      "facebookPageId": "facebook-page-id",
      "id": "667802d812321342",
      "pageName": "facebook-page-name",
      "status": "active",
      "type": "messenger",
      "undefined": "done",
    },
  },
  "status": 200,
}
`;

exports[`update-faceboook-integration Everthing is successful sends back status 200 when the code runs without error 2`] = `
Array [
  Array [
    Object {
      "method": "get",
      "url": "https://graph.facebook.com/oauth/access_token?grant_type=fb_exchange_token&client_id=5e31c81640a22c000f5d7f27&client_secret=123457&fb_exchange_token=short-user-access-token",
    },
  ],
  Array [
    Object {
      "method": "get",
      "url": "https://graph.facebook.com/12345678?fields=access_token&access_token=access-token",
    },
  ],
  Array [
    Object {
      "auth": Object {
        "password": "secret",
        "username": "id",
      },
      "method": "get",
      "url": "https://api.smooch.io/v2/apps/5e31c81640a22c000f5d7f28/integrations/5e31c81640a22c000f5d7f28",
    },
  ],
]
`;

exports[`update-faceboook-integration Everthing is successful when decription and client disconnect minutes are not provided 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeNames": Object {
        "#name": "name",
        "#updatedBy": "updated-by",
      },
      "ExpressionAttributeValues": Object {
        ":name": "smooch",
        ":updated": "January 1 1970",
        ":updatedBy": "667802d8-2260-436c-958a-2ee0f71f73f0",
      },
      "Key": Object {
        "id": "5e31c81640a22c000f5d7f28",
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
      "ReturnValues": "ALL_NEW",
      "TableName": "us-east-1-dev-smooch",
      "UpdateExpression": "set #name = :name, #updatedBy = :updatedBy, updated = :updated",
    },
  ],
]
`;

exports[`update-faceboook-integration passes in the correct arguments to axios when facebook page access token and facebook app secret is missing 1`] = `
Array [
  Array [
    Object {
      "auth": Object {
        "password": "secret",
        "username": "id",
      },
      "method": "get",
      "url": "https://api.smooch.io/v2/apps/5e31c81640a22c000f5d7f28/integrations/5e31c81640a22c000f5d7f28",
    },
  ],
]
`;

exports[`update-faceboook-integration passes in the correct arguments to axios when facebook page access token is provided 1`] = `
Array [
  Array [
    Object {
      "auth": Object {
        "password": "secret",
        "username": "id",
      },
      "method": "get",
      "url": "https://api.smooch.io/v2/apps/5e31c81640a22c000f5d7f28/integrations/5e31c81640a22c000f5d7f28",
    },
  ],
]
`;

exports[`update-faceboook-integration sends back status 400 when both user access token and page access token are missing 1`] = `
Object {
  "body": Object {
    "error": "Page Access Token and User Access Token missing, Please provide any one of the token",
  },
  "status": 400,
}
`;

exports[`update-faceboook-integration sends back status 400 when there is a invalid body value 1`] = `
Object {
  "body": Object {
    "error": [ValidationError: "appId" is required],
    "message": "Error: invalid body value(s). \\"appId\\" is required",
  },
  "status": 400,
}
`;

exports[`update-faceboook-integration sends back status 400 when there is a invalid params value 1`] = `
Object {
  "body": Object {
    "error": [ValidationError: "id" is not allowed to be empty],
    "message": "Error: invalid params value(s). \\"id\\" is not allowed to be empty",
  },
  "status": 400,
}
`;

exports[`update-faceboook-integration sends back status 403 when there are not enough permissions 1`] = `
Object {
  "body": Object {
    "expectedPermissions": Object {
      "tenant": Array [
        "FACEBOOK_INTEGRATIONS_APP_UPDATE",
      ],
    },
    "message": "Error not enough permissions",
  },
  "status": 403,
}
`;

exports[`update-faceboook-integration sends back status 500 when facebook api for get page access token returns error 1`] = `
Object {
  "body": Object {
    "error": "Unexpected error occurred retrieving Page Access token. Please try again with Facebook Login/Another user access token",
  },
  "status": 500,
}
`;

exports[`update-faceboook-integration sends back status 500 when facebook api returns error for long lived token 1`] = `
Object {
  "body": Object {
    "error": "Unexpected error occurred retrieving Page Access token. Please try again with Facebook Login/Another user access token",
  },
  "status": 500,
}
`;

exports[`update-faceboook-integration sends back status 500 when fails to parse credentials 1`] = `
Object {
  "body": Object {
    "message": "Failed to parse smooch credentials or credentials does not exists",
  },
  "status": 500,
}
`;

exports[`update-faceboook-integration sends back status 500 when smooch get integration api returns error 1`] = `
Object {
  "body": Object {
    "error": "Unexpected error occurred getting integration from smooch",
  },
  "status": 500,
}
`;

exports[`update-faceboook-integration sends back status 500 when there is a error retrieving digital channels credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;

exports[`update-faceboook-integration sends back status 500 when there is a error saving records in DynamoDB for tenant 1`] = `
Object {
  "body": Object {
    "error": [TypeError: docClient.update(...).promise is not a function],
    "message": "An Error has occurred trying to save a record in DynamoDB for tenant",
  },
  "status": 500,
}
`;

exports[`update-faceboook-integration sends back status 500 when there is a error updating facebook integration for tenant 1`] = `
Object {
  "body": Object {
    "error": [Error],
    "message": "An Error has occurred trying to update facebook integration for tenant",
  },
  "status": 500,
}
`;
